...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yiv-Ly-xE1">
                                                    <rect key="frame" x="119" y="11" width="106" height="20.5"/>
                                                    <constraints>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TM9-qo-dQl" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Bills" id="bhD-g9-Ue1"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nL3-Zp-ro0">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contacts" id="XhJ-Lo-et2">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="4bS-BU-7Fx">
                            <connections>
                                <action selector="btnAddContact:" destination="EAx-Rw-9Kz" id="nKc-rl-hlf"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pW0-xX-cyF">
                                                <rect key="frame" x="16" y="521" width="49" height="30"/>
                                                <state key="normal" title="Submit"/>
                                                <connections>
                                                    <action selector="submit:" destination="Xj1-Vo-gnE" eventType="touchUpInside" id="x6x-ED-D00"/>
...
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LC4-0q-qJT">
                                                <rect key="frame" x="40" y="159" width="240" height="30"/>
                                                <nil key="textColor"/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Amount" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoCons
                                            <rect key="frame" x="208" y="36" width="96" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Bills" id="uT9-hb-uIZ">
                        <barButtonItem key="rightBarButtonItem" title="Add Bill" id="qPW-Nr-0iX">
                            <connections>
                                <action selector="btnAddBill:" destination="EHN-xJ-WDe" id="VL3-Ay-2my"/>
...
        <scene sceneID="EX1-YP-ayF">
            <objects>
                <viewController storyboardIdentifier="BillAdd" title="Add New Bill" id="c8f-sq-aLh" customClass="BillAddViewController" customModule="Houseshare" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleAspectFit" id="8A6-fy-4XX">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YPx-PB-aIk" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Chores" id="k0C-9N-KTN"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gbW-K6-1oX">
...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="697"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the name of the chore" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HJK-Fz-aXk">
                                                <rect key="frame" x="51" y="104" width="219.5" height="30"/>
                                                <nil key="textColor"/>
...
                                                </constraints>
                                                <items>
                                                    <navigationItem title="Add New Chore" id="JeE-w6-zNo">
                                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="5HH-kh-1Hk">
                                                            <connections>
...
